# nnll

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  __init__.py  _semantic.py  _version.py  algorithms.toml  compute.py  index.py  indexer.py  link.py  main.py  new_index.py  ngen.py  nget.py  nnll._version.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  start.py  test.py  test_combo_history.db  test_folder_dummy.gguf.json  test_import.py  ts_speaker.json  tuner.py
.github/workflows/: docs.yml  nnll.yml  python-app.yml
core/: __init__.py  capacity.py  compute.py  config.py  generators.py  indexer.py  tuner.py
core/scripts/: __init__.py  null.py
docs/: index.html  nnll.html  search.js
docs/nnll/: autocard.html  autoquant.html  block.html  chip_stats.html  console.html  constants.html  embeds.html  helpers.html  hyperchain.html  init_gpu.html  json_cache.html  random.html  read_tags.html  reverse_codec.html  save_generation.html
metadata/: algorithms.toml
mll 00/: src.py
mll 06/: src.py
mll 07/: src.py  test_src.py
modules/: README.md  __init__.py  index.py  test_combo_history.db  toc.md
modules/mll_00/: src.py
modules/mll_01/: src.py
modules/mll_02/: src.py
modules/mll_03/: src.py
modules/mll_04/: src.py
modules/mll_05/: src.py
modules/mll_06/: src.py
modules/mll_07/: src.py
modules/mll_08/: src.py
modules/mll_09/: src.py
modules/mll_10/: src.py
modules/mll_11/: src.py  test_src.py
modules/mll_12/: src.py
modules/mll_14/: src.py
modules/nll_15/: src.py
modules/nnll_00/: src.py  test_src.py
modules/nnll_01/: __init__.py  src.py
modules/nnll_02/: src.py  test_src.py  test_src_2.py
modules/nnll_03/: src.py  test_src.py
modules/nnll_04/: expected_output.json  run.py  src.py  test_src.py
modules/nnll_05/: expected_output.json  requirements.txt  src.py  test_src.py
modules/nnll_06/: draft.py  src.py  (+1 more)
nll 01/: src.py
nll 02/: src.py
nll 03/: src.py  test_src.py
nll 04/: src.py
nnll/: __init__.py  autocard.py  autoquant.py  block.py  chip_stats.py  console.py  constants.py  embeds.py  helpers.py  hub_cache.py  hyperchain.py  init_gpu.py  json_cache.py  random.py  read_tags.py  reverse_codec.py  save_generation.py
nnll.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nnll_01/: __init__.py
nnll_02/: __init__.py
nnll_03/: __init__.py  __main__.py  test_src.py  test_src_2.py  test_src_3.py
nnll_04/: __init__.py  src.py  test_src.py
nnll_05/: __init__.py  test_src.py
nnll_06/: __init__.py  qwen25.json  src.py  test_src.py
nnll_07/: __init__.py  test_src.py
nnll_08/: __init__.py  requirements.txt  setup_torch.py  src.py  test_src.py
nnll_09/: __init__.py
nnll_10/: __init__.py  __main__.py  _version.py  capacity.py  centre_fold.py  chat_machine.py  combo.tcss  compute.py  display_bar.py  entry_field.py  fetch_models.py  fold.py  full_screen.py  init.py  main_screen.py  pyproject.toml  read_out.py  response_panel.py  retrieval.py  side_margins.tcss  tag_line.py  test_src.py  testrun.py  text_generator.py  token_counters.py
nnll_10/package/: __init__.py  __main__.py  carousel.py  chat_machine.py  combo.tcss  conversion_graph.py  display_bar.py  fold.py  input_tag.py  main_screen.py  message_panel.py  model_register.py  output_tag.py  response_panel.py  selectah.py  tag_line.py  token_counters.py  voice_panel.py
nnll_10/tests/: test_init_exit.py  test_model_register.py  test_orientation.py
nnll_11/: __init__.py  __main__.py  alternate.py
nnll_12/: __init__.py  __main__.py  button.tcss
nnll_13/: __init__.py  __main__.py  alt.py
nnll_14/: __init__.py  parler.py  parler_phi.py  phi4.py  tensor_device.py  upscale.py
nnll_15/: __init__.py  constants.py
nnll_16/: __init__.py  src.py  test_src.py
nnll_17/: __init__.py  __main__.py
nnll_18/: __init__.py
nnll_19/: __init__.py
nnll_20/: __init__.py
nnll_21/: __init__.py
nnll_22/: __init__.py  test_src.py
nnll_24/: __init__.py
nnll_25/: __init__.py  test_src.py
nnll_26/: __init__.py  src.py
nnll_27/: __init__.py  src.py  test_src.py
nnll_28/: __init__.py
nnll_29/: __init__.py  src.py  test_src.py
nnll_30/: __init__.py  test_src.py
nnll_31/: __init__.py  run.py  src.py
nnll_32/: __init__.py  load_map.json  test_src.py
nnll_33/: __init__.py  test_src.py
nnll_34/: __init__.py  test_src.py
nnll_35/: __init__.py
nnll_36/: __init__.py  test_src.py
nnll_37/: __init__.py
nnll_39/: __init__.py
nnll_40/: __init__.py
nnll_41/: __init__.py  test_src.py
nnll_42/: __init__.py
nnll_43/: __init__.py
nnll_44/: __init__.py  test_src.py
nnll_45/: __init__.py
nnll_46/: __init__.py  test_src.py
nnll_47/: __init__.py
nnll_48/: __init__.py  test_src.py
nnll_49/: __init__.py  test_src.py
nnll_51/: __init__.py  test_combo_history.db
nnll_52/: __init__.py
nnll_53/: __init__.py
nnll_54/: __init__.py
nnll_56/: __init__.py
nnll_57/: __init__.py  test_src.py
nnll_59/: __init__.py
nnll_60/: __init__.py  mir_builder.py  mir_maid.py  nodes.py  tuner.py
nnll_61/: __init__.py  test_src.py  test_src_2.py
nnll_62/: __init__.py  sd_xl_base.yaml
nnll_63/: __init__.py
nnll_64/: __init__.py  audio.py
scripts/: script_nnll_00.py  script_nnll_04.py  script_nnll_05.py  script_nnll_22.py  script_nnll_23.py  script_nnll_24.py  script_nnll_29.py
tests/: 01_test_src.py  03_test_src.py  03_test_src_2.py  04_test_src.py  04_test_src_2.py  05_test_src.py  08_test_src.py  10_test_init_exit.py  10_test_model_register.py  10_test_orientation.py  10_test_widget_mounts.py  14_draw_graph.py  14_test_graph.py  27_test_src.py  29_test_src.py  31_test_src.py  32_test_src.py  33_test_src.py  35_test_src.py  39_test_src.py  41_test_src.py  49_test_src.py  51_test_src.py  60_test_src.py  61_test_src.py  61_test_src_2.py  62_test_src.py  __main__.py  config.toml  error_log<AsyncMock id='4387594192'>.json  error_log<AsyncMock id='4425967632'>.json  test_03_a.py  test_03_b.py  test_04.py  test_04_2.py  test_04_b.py  test_05.py  test_07.py  test_08.py  test_10_model_register.py  (+90 more)
(+279 files in other folders)
