# SPDX-License-Identifier: MPL-2.0 AND LicenseRef-Commons-Clause-License-Condition-1.0
# <!-- // /*  d a r k s h a p e s */ -->

[build-system]
requires      = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "darkshapes", email = "91800957+exdysa@users.noreply.github.com" },
]
description = "Neural Network Link Library : A comprehensive modular toolkit for Diffusion and Large Language Model inference processes."
dynamic = ["version"]
name = "nnll"
readme = "README.md"
requires-python = ">= 3.11"
keywords = [
    "AI",
    "neural network",
    "library",
    "Diffusion",
    "LLM",
    "identification",
    "URI",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Editors",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Multimedia :: Video :: Display",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
]
dependencies = [
    "diffusers @ git+https://github.com/huggingface/diffusers.git",
    "huggingface-hub[hf-xet,cli]>=0.36",
    "transformers>=4.57.1",
    "accelerate>=1.10.0",
    "peft>=0.17.0",
    "rich>=14.2.0",
    "pydantic>=2.11.10",
    "pydantic-core>=2.33.2",
    "sentencepiece>=0.2.1",
    "protobuf>=6.33.1",
    "einops>=0.8.1",
    "openai>=2.8.1",
    "opencv-python>=4.10.0.84",
    "msgpack>=1.1.2",
    "pdoc>=16.0.0",

]
[dependency-groups]
dev = [
    "nnll[dev]",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.9",
]
[project.optional-dependencies]
# -- frameworks --

# -- accelerators --
cuda = [
    "torch",
    "torchvision",
    "torchaudio",
    "torchsde",
    "triton ; sys_platform != 'win32' and sys_platform != 'darwin'",
    "triton-windows ; sys_platform == 'win32'",
    "bitsandbytes>=0.45 ; sys_platform != 'darwin'",
    "bitsandbytes>=0.46.0 ; sys_platform == 'linux'",
]

cpu = [
    "torch",
    "torchvision",
    "torchaudio",
    "torchsde",
]
mps = [
    "torch",
    "torchvision",
    "torchaudio",
    "torchsde",
    "mlx-vlm<=0.1.26 ; sys_platform == 'darwin'",                                                                 # all specifc due to mlx-audio
    "mlx-lm<=0.24.1 ; sys_platform == 'darwin'",                                                                  # ...
    "mlx-audio; sys_platform == 'darwin'",                                                                        # ... etc
    "numpy<=2.2; sys_platform == 'darwin'",
    "misaki>=0.8.2 ; python_version < '3.13' and sys_platform == 'darwin'",
    "misaki[en] @ git+https://github.com/hexgrad/misaki ; python_version >= '3.13' and sys_platform == 'darwin'",
    "pip>=25.0.1",                                                                                                # chroma",
    "mflux>=0.2.1 ; sys_platform == 'darwin'",
]

dev = [
    "nnll[full]",
    "pyright>=1.1.407",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.9",
]
full = [
    "nnll[mps] ; sys_platform == 'darwin'",
    "nnll[cuda] ; sys_platform != 'darwin'",
]

[project.urls]
Homepage      = "https://github.com/darkshapes/nnll"
Documentation = "https://github.com/darkshapes/sdbx/wiki"

[project.scripts]
nnll-autocard = "nnll.autocard:main"
nnll-info     = "nnll.chip_stats:main"

[tool.uv]
prerelease       = "allow"
preview          = true

conflicts = [
    [
        { extra = "cpu" },
        { extra = "mps" },
        { extra = "cuda" },
    ],
]

[[tool.uv.index]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name     = "pytorch-cu128"
url      = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torchaudio = [
    { index = "pytorch-cpu", extra = "mps", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", extra = "cuda", marker = "sys_platform != 'darwin'" },
]

torchvision = [
    { index = "pytorch-cpu", extra="mps", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", extra = "cuda", marker = "sys_platform != 'darwin'" },
]

torch = [
    { index = "pytorch-cpu", extra = "mps", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", extra = "cuda", marker = "sys_platform != 'darwin'" },

]

diffusers = { git = "https://github.com/huggingface/diffusers" }

[tool.setuptools_scm]
write_to = "_version.py"

[tool.setuptools.packages.find]
where   = ["."]
include = ["nnll*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
nnll = ["nnll/config/*.json"]

[tool.ruff]
line-length    = 140
include        = ["*.py"]
extend-exclude = ["^tests/.*$", "test.*$"]

[tool.ruff.lint]
ignore = ["E731"]

[tool.ruff.lint.pycodestyle]
max-line-length               = 140
ignore-overlong-task-comments = true

[tool.pylint]
max-line-length = 140
ignore-paths    = ["^tests/.*$", "test_.*$"]
disable         = ["C0415"]

[tool.pyright]
include = ["nnll"]
exclude = [
    "^tests/.*$",
  "**/__pycache__", # cache directories
  "./typings",      # generated type stubs
]

[tool.typos]
files.extend-exclude = ["^tests/.*$", "test.*$"]
default.extend-words = { "ot" = "ot", "convers" = "convers" }
